apps/bazarr/bazarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: linuxserver/bazarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /tv
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: bazarr-media-pvc
