apps/bazarr/bazarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  selector:
    app: bazarr
  ports:
    - port: 6767
      targetPort: 6767
  type: ClusterIP
