apps/bazarr/bazarr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: default
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: default
  hostnames:
  - "bazarr.home.williamlhunter.com"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: bazarr
        port: 6767
